# wem2csv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
wem2csv/: __main__.py  cli.py
